fix issue with overflow

--- a/src/entities/bookmark/bookmark.module.scss
+++ b/src/entities/bookmark/bookmark.module.scss
@@ -60,6 +60,7 @@
   flex: 1;
   align-items: center;
   padding: 0.25rem;
+  width: 100%;
 }
 
 .bookmarkTitle {
